add buttons and new block

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <style>
       body{
-        background: url("../src/assets/back2.jpeg") center no-repeat;
-        background-size: cover;
+        background-color: snow;
       }
     </style>
     <meta charset="utf-8">
