--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       body{
-        background-color: snow;
+        background-color: bisque;
       }
     </style>
     <meta charset="utf-8">
